[package]
name = "verder-helpen-auth-irma"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

[dependencies]
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
verder-helpen-sentry = { git = "https://github.com/verder-helpen/verder-helpen-sentry.git", optional = true }
askama = "0.11.1"
base64 = "0.13.1"
josekit = "0.8.3"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
strum = "0.24.1"
strum_macros = "0.24.3"

[features]
sentry = ["dep:verder-helpen-sentry"]
